src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
/* ... */
.checkout__address-box__new {
  @include respond-from("screen-md") {
    margin: auto;
    text-align: center;
    @include vertical-center-element();

    i {
      display: block;
      color: $color-icons-separator;
      font-size: 1.4em;
    }
  }
}

// payment type selection

.checkout__payments {
  @include respond-from("screen-md") {
    @include make-row();
    padding-bottom:  $grid-gutter-width / 2;
    padding-left:  $grid-gutter-width / 2;
    border: none;
    margin: 0 $grid-gutter-width / 2;
  }
}

.checkout__payment {
  @include make-md-column(4);
  @include make-lg-column(3);
  @include clearfix;
  padding: 0;
  line-height: 1.4em;
  font-size: 0.813em;
  @include respond-from("screen-md") {
    padding: $space-sm;
    padding-left: 0;
  }
}

.checkout__payment__wrapper {
  border-bottom: $dropdown-border;
  padding: $space-sm;
  &:hover {
    cursor: pointer;
  }

  i {
    display: none;
  }

  @include respond-from("screen-md") {
    border: $dropdown-border;
    padding: $space-sm 0;
    margin-bottom: $grid-gutter-width / 2;
    overflow: hidden;
    line-height: 1.4em;
    font-size: 1em;
    position: relative;

    @include transition(all .1s linear);
    &:hover {
      cursor: pointer;
      border: $cta-secondary-border;
      color: $color-text-highlight;
    }
  }
}

.checkout__payment__wrapper--active {
  color: $color-text-highlight;

  i {
    display: inline-block;
    margin-right: $space-xs;
    color: $color-text-highlight;
  }

  @include respond-from("screen-md") {
    border: $cta-secondary-border;

    i {
      display: none;
    }
  }
}

.checkout__payment_img {
  float: right;
  width: 40%;
  height: 30px;
  text-align: right;
  margin-top: -5px;

  img {
    display: inline;
    height: 30px;
  }

  @include respond-from("screen-md") {
    white-space: nowrap;
    height: 40px;
    float: none;
    width: auto;
    text-align: center;
    margin-top: 0;

    img {
      height: 40px;
    }
  }
}

.checkout__payment_label {
  width: 70%;
  @include respond-from("screen-md") {
    width: 100%;
    text-align: center;
  }
}

.checkout__payment_paypal_description {
  clear: both;
  font-size: 0.8em;
  padding-left: $grid-gutter-width / 2;
  padding-right: $grid-gutter-width / 2;
  @include respond-from("screen-md") {
    padding-left: 0;
  }
}

.checkout__payment_paypal_description__title {
  font-family: $bold-font-family;
  padding-top: $space-sm;
  padding-bottom: $space-sm;
  @include respond-from("screen-md") {
    padding-top: 0;
  }
}

.checkout__payment_paypal_description__text {
  line-height: $base-line-height;
}

// credit card form

.checkout__item__card {

  .form-group {
    margin: 0 0 $space-sm;
  }

  @include respond-from("screen-md") {
    width: 50%;
    float: left;
  }
}

.checkout__item__card__help {
  text-align: right;
  display: none;

  @include respond-from("screen-md") {
    width: 45%;
    float: left;
    padding-left: 28px;
    text-align: left;

    img {
      @include responsive-img();
    }
  }
}

.voucher-component {
  width: 100%;
  float: left;
  clear: both;

  #voucher_form {
    display: none;
  }

  #voucher-wrapper {
    display: none;
  }

  .error_invalid_voucher {
    display: none;
  }

  .checkout__item {
    border: none;
  }
}

.checkout__disclaimer {
  @include make-xs-column(12);
  @include make-md-column(6);
  @extend .col-md-pull-6;
  padding: $space-sm;
  font-size: 0.875em;
  color: $color-text-secondary;
  text-align: center;
  line-height: 1.4em;
  border-bottom: $dropdown-border;
  @include respond-from("screen-md") {
    text-align: left;
    padding: $grid-gutter-width;
    border: none;
  }
}

.checkout__legal {
  text-align:  center;
  font-size: 0.7em;
  line-height: 1.3em;
  color: $color-text-light;
  padding: $space-sm;

  span {
    display: inline-block;
    margin-right: 14px;
  }
}

.checkout__submit {
  @include make-xs-column(12);
  @include make-md-column(6);
  @extend .col-md-push-6;
  padding: 0 $space-sm;

  .button {
    width: 100%;
  }

  @include respond-from("screen-md") {
    padding: $grid-gutter-width;

    .button {
      float: right;
      width: auto;
    }
  }
}

.checkout__list {
  @extend .radio;
  line-height: 40px;
  font-size: 0.875em;
  padding: $space-xs $space-md;
  margin: 0;
  .checkout__list__radio_button {
    height: 44px;
    width: 20px;
    margin-left: 0 !important;
  }
}

.checkout__list__radio_button {
  @include make-sprite-radiobutton(
    $radiobutton-simple-unselected-group,
    $radiobutton-simple-selected-group,
    $radiobutton-simple-unselected-height
  );
}

.checkout__list__text {
  line-height: 40px;
  padding-left: 0 !important;
  display: inline-block;
}

.checkout__list__payment_option_type {
  vertical-align: middle;
  display: inline-block;
}

.checkout__list__payment_option_type--visa {
  @include retina-sprite($visa-group);
}

.checkout__list__payment_option_type--mastercard {
  @include retina-sprite($mastercard-group);
}

.delivery__notes {
  color: $color-text-secondary;
}

.checkout__more-feature-link {
  display: block;
  margin-top: $space-lg;
}

.checkout__address-list {
  line-height: 1.4em;
  padding: $space-xs;
  border-top: $dropdown-border;
  margin: 0;
  &:last-child {
    border-bottom: $dropdown-border;
  }
  .delivery_address {
    padding: $space-xs;
    @include respond-from("screen-md") {
      padding: $space-sm;
    }
    background-color: $color-bg-primary;
    cursor: pointer;

    @include transition(background-color .1s linear);
    &:hover {
      background-color: $color-bg-secondary;
    }
  }
}

.selected-address {
  @extend .radio;
  line-height: 1.4em;
  padding: $space-sm;
  margin: 0;
  @include respond-from("screen-md") {
    padding: $grid-gutter-width;
  }

}

.checkout__add-new-wrap {
  @include clearfix;
  @include respond-from("screen-md") {
    padding-top: $grid-gutter-width;
  }
}
/* ... */

